--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "friendsofphp/php-cs-fixer": "^3.65",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
@@ -53,7 +54,10 @@
         "dev": [
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
-        ]
+        ],
+        "php-cs-fixer-fix" : "./vendor/bin/php-cs-fixer fix --show-progress=dots",
+        "php-cs-fixer-check" : "./vendor/bin/php-cs-fixer check --show-progress=dots"
+
     },
     "extra": {
         "laravel": {
